examples/d2/d2-plugin/code/D2C/D2CParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\Daniel\winrepos\logix\examples\d2\d2-plugin\code\D2C\D2C.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class D2CParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		BOR=1, BXOR=2, PLUS=3, INCREMENT=4, DECREMENT=5, MINUS=6, STAR=7, HASH=8, 
		AMPERSAND=9, DIV=10, EQ=11, EQEQ=12, NEQ=13, LESSTHAN=14, GREATHAN=15, 
		COMMA=16, SEMI=17, LPAREN=18, RPAREN=19, LCURLY=20, RCURLY=21, IF=22, 
		ELSE=23, ELSEIF=24, RETURN=25, FOR=26, WHILE=27, BREAK=28, DEFINE=29, 
		ORG=30, DECIMALLIT=31, HEXADECILIT=32, BINARYLIT=33, STRINGLIT=34, COMMENT=35, 
		ID=36, WS=37;
	public const int
		RULE_program = 0, RULE_preprocessordir = 1, RULE_preprodirs = 2, RULE_funcdef = 3, 
		RULE_block = 4, RULE_paramlist = 5, RULE_paramdecl = 6, RULE_statement = 7, 
		RULE_vardecl = 8, RULE_assignment = 9, RULE_funccall = 10, RULE_arglist = 11, 
		RULE_ifstatement = 12, RULE_ifstatementelse = 13, RULE_retstm = 14, RULE_whileloop = 15, 
		RULE_lvalue = 16, RULE_rvalue = 17, RULE_prefixop = 18, RULE_postfixop = 19, 
		RULE_binop = 20, RULE_type = 21, RULE_puretype = 22, RULE_pointertype = 23;
	public static readonly string[] ruleNames = {
		"program", "preprocessordir", "preprodirs", "funcdef", "block", "paramlist", 
		"paramdecl", "statement", "vardecl", "assignment", "funccall", "arglist", 
		"ifstatement", "ifstatementelse", "retstm", "whileloop", "lvalue", "rvalue", 
		"prefixop", "postfixop", "binop", "type", "puretype", "pointertype"
	};

	private static readonly string[] _LiteralNames = {
		null, "'|'", "'^'", "'+'", "'++'", "'--'", "'-'", "'*'", "'#'", "'&'", 
		"'/'", "'='", "'=='", "'!='", "'<'", "'>'", "','", "';'", "'('", "')'", 
		"'{'", "'}'", "'if'", "'else'", "'elseif'", "'return'", "'for'", "'while'", 
		"'break'", "'define'", "'org'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "BOR", "BXOR", "PLUS", "INCREMENT", "DECREMENT", "MINUS", "STAR", 
		"HASH", "AMPERSAND", "DIV", "EQ", "EQEQ", "NEQ", "LESSTHAN", "GREATHAN", 
		"COMMA", "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "IF", "ELSE", 
		"ELSEIF", "RETURN", "FOR", "WHILE", "BREAK", "DEFINE", "ORG", "DECIMALLIT", 
		"HEXADECILIT", "BINARYLIT", "STRINGLIT", "COMMENT", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "D2C.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static D2CParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public D2CParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public D2CParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessordirContext[] preprocessordir() {
			return GetRuleContexts<PreprocessordirContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessordirContext preprocessordir(int i) {
			return GetRuleContext<PreprocessordirContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncdefContext[] funcdef() {
			return GetRuleContexts<FuncdefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncdefContext funcdef(int i) {
			return GetRuleContext<FuncdefContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==HASH) {
				{
				{
				State = 48;
				preprocessordir();
				}
				}
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 54;
				funcdef();
				}
				}
				State = 59;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprocessordirContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASH() { return GetToken(D2CParser.HASH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PreprodirsContext preprodirs() {
			return GetRuleContext<PreprodirsContext>(0);
		}
		public PreprocessordirContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessordir; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessordir(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocessordirContext preprocessordir() {
		PreprocessordirContext _localctx = new PreprocessordirContext(Context, State);
		EnterRule(_localctx, 2, RULE_preprocessordir);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(HASH);
			State = 61;
			preprodirs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprodirsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(D2CParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(D2CParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue() {
			return GetRuleContext<RvalueContext>(0);
		}
		public PreprodirsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprodirs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprodirs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprodirsContext preprodirs() {
		PreprodirsContext _localctx = new PreprodirsContext(Context, State);
		EnterRule(_localctx, 4, RULE_preprodirs);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			Match(DEFINE);
			State = 64;
			Match(ID);
			State = 65;
			rvalue(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncdefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(D2CParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(D2CParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamlistContext paramlist() {
			return GetRuleContext<ParamlistContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(D2CParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcdef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncdef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncdefContext funcdef() {
		FuncdefContext _localctx = new FuncdefContext(Context, State);
		EnterRule(_localctx, 6, RULE_funcdef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			type();
			State = 68;
			Match(ID);
			State = 69;
			Match(LPAREN);
			State = 70;
			paramlist();
			State = 71;
			Match(RPAREN);
			State = 72;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext stms;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLY() { return GetToken(D2CParser.LCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLY() { return GetToken(D2CParser.RCURLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(LCURLY);
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INCREMENT) | (1L << DECREMENT) | (1L << MINUS) | (1L << STAR) | (1L << AMPERSAND) | (1L << LPAREN) | (1L << IF) | (1L << RETURN) | (1L << WHILE) | (1L << BREAK) | (1L << DECIMALLIT) | (1L << HEXADECILIT) | (1L << BINARYLIT) | (1L << STRINGLIT) | (1L << ID))) != 0)) {
				{
				{
				State = 75;
				_localctx.stms = statement();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81;
			Match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamlistContext : ParserRuleContext {
		public ParamdeclContext _paramdecl;
		public IList<ParamdeclContext> _decls = new List<ParamdeclContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(D2CParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(D2CParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamdeclContext[] paramdecl() {
			return GetRuleContexts<ParamdeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamdeclContext paramdecl(int i) {
			return GetRuleContext<ParamdeclContext>(i);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramlist; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParamlist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamlistContext paramlist() {
		ParamlistContext _localctx = new ParamlistContext(Context, State);
		EnterRule(_localctx, 10, RULE_paramlist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 83;
				_localctx._paramdecl = paramdecl();
				_localctx._decls.Add(_localctx._paramdecl);
				}
			}

			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 86;
				Match(COMMA);
				State = 87;
				_localctx._paramdecl = paramdecl();
				_localctx._decls.Add(_localctx._paramdecl);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamdeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(D2CParser.ID, 0); }
		public ParamdeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_paramdecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParamdecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParamdeclContext paramdecl() {
		ParamdeclContext _localctx = new ParamdeclContext(Context, State);
		EnterRule(_localctx, 12, RULE_paramdecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			type();
			State = 94;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VardeclContext vardecl() {
			return GetRuleContext<VardeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(D2CParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RetstmContext retstm() {
			return GetRuleContext<RetstmContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfstatementContext ifstatement() {
			return GetRuleContext<IfstatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileloopContext whileloop() {
			return GetRuleContext<WhileloopContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BREAK() { return GetToken(D2CParser.BREAK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue() {
			return GetRuleContext<RvalueContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_statement);
		try {
			State = 112;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96;
				vardecl();
				State = 97;
				Match(SEMI);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 99;
				assignment();
				State = 100;
				Match(SEMI);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 102;
				retstm();
				State = 103;
				Match(SEMI);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 105;
				ifstatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 106;
				whileloop();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 107;
				Match(BREAK);
				State = 108;
				Match(SEMI);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 109;
				rvalue(0);
				State = 110;
				Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VardeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(D2CParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(D2CParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue() {
			return GetRuleContext<RvalueContext>(0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vardecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVardecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VardeclContext vardecl() {
		VardeclContext _localctx = new VardeclContext(Context, State);
		EnterRule(_localctx, 16, RULE_vardecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			type();
			State = 115;
			Match(ID);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQ) {
				{
				State = 116;
				Match(EQ);
				State = 117;
				rvalue(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LvalueContext lvalue() {
			return GetRuleContext<LvalueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(D2CParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue() {
			return GetRuleContext<RvalueContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 18, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			lvalue();
			State = 121;
			Match(EQ);
			State = 122;
			rvalue(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunccallContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(D2CParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(D2CParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArglistContext arglist() {
			return GetRuleContext<ArglistContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(D2CParser.RPAREN, 0); }
		public FunccallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funccall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunccall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunccallContext funccall() {
		FunccallContext _localctx = new FunccallContext(Context, State);
		EnterRule(_localctx, 20, RULE_funccall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(ID);
			State = 125;
			Match(LPAREN);
			State = 126;
			arglist();
			State = 127;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArglistContext : ParserRuleContext {
		public RvalueContext _rvalue;
		public IList<RvalueContext> _args = new List<RvalueContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(D2CParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(D2CParser.COMMA, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext[] rvalue() {
			return GetRuleContexts<RvalueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue(int i) {
			return GetRuleContext<RvalueContext>(i);
		}
		public ArglistContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arglist; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ID2CVisitor<TResult> typedVisitor = visitor as ID2CVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArglist(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArglistContext arglist() {
		ArglistContext _localctx = new ArglistContext(Context, State);
		EnterRule(_localctx, 22, RULE_arglist);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INCREMENT) | (1L << DECREMENT) | (1L << MINUS) | (1L << STAR) | (1L << AMPERSAND) | (1L << LPAREN) | (1L << DECIMALLIT) | (1L << HEXADECILIT) | (1L << BINARYLIT) | (1L << STRINGLIT) | (1L << ID))) != 0)) {
				{
				State = 129;
				_localctx._rvalue = rvalue(0);
				_localctx._args.Add(_localctx._rvalue);
				}
			}

			State = 136;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 132;
				Match(COMMA);
				State = 133;
				_localctx._rvalue = rvalue(0);
				_localctx._args.Add(_localctx._rvalue);
				}
				}
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfstatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(D2CParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(D2CParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public RvalueContext rvalue() {
			return GetRuleContext<RvalueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(D2CParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfstatementelseContext ifstatementelse() {
			return GetRuleContext<IfstatementelseContext>(0);
		}
		public IfstatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
